src/objects/CRG__c.object
<CustomObject>
    <fields>
        <fullName>fb_VASTAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAST Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fn_MBOExecAdvRateDetail__c</fullName>
        <label>MBO Exec Advanced Rate Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_MBOExecRateDetail__c</fullName>
        <label>MBO Exec Rate Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_MBOStaffRateDetail__c</fullName>
        <label>MBO Staff Rate Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_MBOSubAdvRateDetail__c</fullName>
        <label>MBO Sub Advanced Rate Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_MBOSubRateDetail__c</fullName>
        <label>MBO Sub Rate Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_accountEmail__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fn_amEmail__c</fullName>
        <formula>rs_client__r.Account_Manager__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_amPhone__c</fullName>
        <formula>rs_client__r.Account_Manager__r.fs_phone__c</formula>
        <label>Account Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_enrollmentCodes__c</fullName>
        <label>Enrollment Codes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_execAdvRate__c</fullName>
        <label>MBO Exec Adv Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_execRate__c</fullName>
        <label>MBO Exec Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_mboExecAdvRate_COPY__c</fullName>
        <formula>fn_execAdvRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBO Exec Adv Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_mboStaffRate_COPY__c</fullName>
        <formula>fn_staffRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBO Staff Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_mboSubAdvRate_COPY__c</fullName>
        <formula>fn_subAdvRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBO Sub Adv Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_mboSubRate_COPY__c</fullName>
        <formula>fn_subRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBO Sub Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_modReqEmail__c</fullName>
        <label>Modification Request Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fn_modReqFullName__c</fullName>
        <label>Modification Request Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_oaEmail__c</fullName>
        <formula>rs_client__r.AccountExecutive__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Assistant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_oaFullName__c</fullName>
        <formula>rs_client__r.AccountExecutive__r.Name</formula>
        <label>Operational Assistant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fn_paymentTerms_COPY__c</fullName>
        <formula>fn_paymentTerms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_paymentTerms__c</fullName>
        <label>Payment Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_staffRate__c</fullName>
        <label>MBO Staff Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_subAdvRate__c</fullName>
        <label>MBO Sub Adv Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fn_subRate__c</fullName>
        <label>MBO Sub Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fs_AM__c</fullName>
        <formula>rs_client__r.Account_Manager__r.Name</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_TEEntry__c</fullName>
        <label>Time &amp; Expense Entry</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_accountEmail_COPY__c</fullName>
        <formula>fn_accountEmail__c</formula>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_activationEmailExecURL__c</fullName>
        <label>Activation Email MBO Exec URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_activationEmailStaffURL__c</fullName>
        <label>Activation Email MBO Staff URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_activationEmailSubURL__c</fullName>
        <label>Activation Email MBO Sub URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_apContactEmail_COPY__c</fullName>
        <formula>fs_apContactEmail__c</formula>
        <label>AP Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_apContactEmail__c</fullName>
        <formula>rs_apEscalation__r.Email</formula>
        <label>AP Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_apContactFullName_COPY__c</fullName>
        <formula>rs_apEscalation__r.FirstName + &quot; &quot; + rs_apEscalation__r.LastName</formula>
        <label>AP Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_apContactPhone_COPY__c</fullName>
        <formula>fs_apContactPhone__c</formula>
        <label>AP Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_apContactPhone__c</fullName>
        <formula>rs_apEscalation__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_athenaClientExecutiveEmail__c</fullName>
        <label>Athena Client Executive Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_athenaContractorEmail1__c</fullName>
        <label>Athena Contractor Email URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_athenaContractorEmail2__c</fullName>
        <label>Athena Contractor Email URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_athenaManagerEmail__c</fullName>
        <label>Athena Manager Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_bmSLA1__c</fullName>
        <label>BM SLA 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_bmSLA2__c</fullName>
        <label>BM SLA 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_bmSLA3__c</fullName>
        <label>BM SLA 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_bmSLADetail__c</fullName>
        <label>BM SLA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_brokeringInformation__c</fullName>
        <label>Brokering Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_cemFollow__c</fullName>
        <label>CEM Follow-up Email</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_clientContractURL__c</fullName>
        <label>Client Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_clientContractorGroup__c</fullName>
        <label>Client Contractor Group Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_clientDescription__c</fullName>
        <label>Client Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_clientExecutiveIntroEmail__c</fullName>
        <label>Client Executive Intro Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_clientIncumbentData__c</fullName>
        <label>Client Incumbent Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_clientNeedMBOSelection__c</fullName>
        <label>Client Need and MBO Selection</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_clientPresentation__c</fullName>
        <label>Client Presentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_clientProposal__c</fullName>
        <label>Client Proposal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_clientSuppliedComms__c</fullName>
        <label>Client-Supplied Communications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_clientWebsite__c</fullName>
        <label>Client Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_contractorFAQURL__c</fullName>
        <label>Contractor FAQ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_discoveryQuestionnaire__c</fullName>
        <label>Discovery Questionnaire URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_discussionWEnrollee__c</fullName>
        <label>Discussion with Enrollee</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_discussion__c</fullName>
        <label>Discussion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_emSLA1__c</fullName>
        <label>EM SLA 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_emSLA2__c</fullName>
        <label>EM SLA 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_emSLA3__c</fullName>
        <label>EM SLA 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_enrollmentProcessFlowBasicURL__c</fullName>
        <label>Enrollment Process Flow Basic URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_enrollmentProcessFlowDetailedURL__c</fullName>
        <label>Enrollment Process Flow Detailed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_exampleReport1__c</fullName>
        <label>Example Report URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_exampleReport2__c</fullName>
        <label>Example Report URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_exampleReport3__c</fullName>
        <label>Example Report URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_execAdvRateType__c</fullName>
        <label>MBO Exec Adv Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mark-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of (Margin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_execRateType__c</fullName>
        <label>MBO Exec Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mark-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of (Margin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_expensePolicyDetail_COPY__c</fullName>
        <label>Expense Policy Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_expensePolicyDetail__c</fullName>
        <label>Expense Policy Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_expensePolicyURL_COPY__c</fullName>
        <formula>fs_expensePolicyURL__c</formula>
        <label>Expense Policy URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_expensePolicyURL__c</fullName>
        <label>Expense Policy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_fundingSource_COPY__c</fullName>
        <label>Funding Source</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_funding__c</fullName>
        <label>Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_insuranceRequirements__c</fullName>
        <label>Insurance Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_introEmail1Desc__c</fullName>
        <label>Intro Email 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_introEmail1URL__c</fullName>
        <label>Intro Email 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_introEmail2Desc__c</fullName>
        <label>Intro Email 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_introEmail2URL__c</fullName>
        <label>Intro Email 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_introEmail3Desc__c</fullName>
        <label>Intro Email 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_introEmail3URL__c</fullName>
        <label>Intro Email 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_invoiceSchedule__c</fullName>
        <label>Invoice Schedule</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_issueEscalationDetail__c</fullName>
        <label>Issue Escalation Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_managerFAQ__c</fullName>
        <label>Manager FAQ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_managerIntroEmail1__c</fullName>
        <label>Manager Intro Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_managerIntroEmail2__c</fullName>
        <label>Manager Intro Email URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_managerIntro__c</fullName>
        <label>Manager Intro URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_mboExecAdvRateType_COPY__c</fullName>
        <formula>TEXT( fs_execAdvRateType__c )</formula>
        <label>MBO Exec Adv Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mboExecRateType_COPY__c</fullName>
        <formula>TEXT(fs_execRateType__c)</formula>
        <label>MBO Exec Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mboExec_COPY__c</fullName>
        <formula>fn_execRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBO Exec Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fs_mboStaffRateType_COPY__c</fullName>
        <formula>TEXT( fs_staffRateType__c )</formula>
        <label>MBO Staff Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mboSubAdvRateType_COPY__c</fullName>
        <formula>TEXT( fs_subAdvRateType__c )</formula>
        <label>MBO Sub Adv Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mboSubRateType_COPY__c</fullName>
        <formula>TEXT( fs_subRateType__c )</formula>
        <label>MBO Sub Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mspContactEmail__c</fullName>
        <label>MSP Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fs_mspContactFullname__c</fullName>
        <label>MSP Contact Fullname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mspContactPhone__c</fullName>
        <label>MSP Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fs_mspVMSDetail__c</fullName>
        <label>MSP VMS Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_oaIntro_COPY__c</fullName>
        <formula>fs_oaIntro__c</formula>
        <label>OS Intro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_oaIntro__c</fullName>
        <label>OS Intro</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_oaTaskURL_COPY__c</fullName>
        <formula>fs_oaTasksURL__c</formula>
        <label>OS Task URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_oaTasksURL__c</fullName>
        <label>OS Tasks URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_onBoardingChecklistURL__c</fullName>
        <label>On-Boarding Checklist URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_onBoardingDocuments__c</fullName>
        <label>On-boarding Documents</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_onBoardingInst__c</fullName>
        <label>On-boarding inst.</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_otherContractorCommDetail__c</fullName>
        <label>Other Contractor Communication Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_paymentCalendarURL_COPY__c</fullName>
        <formula>fs_paymentCalendarURL__c</formula>
        <label>Payment Calendar URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_paymentCalendarURL__c</fullName>
        <label>Payment Calendar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_paymentSchedule__c</fullName>
        <label>Payment Schedule</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_paymentTermsDetail__c</fullName>
        <label>Payment Terms Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_paymentTimelineURL__c</fullName>
        <label>Payment Timeline URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_postConsultationEmailURL__c</fullName>
        <label>Post-Consultation Email URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_pricingDetailRateComponents__c</fullName>
        <label>Pricing Detail or Rate Components</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_pricingMatrix__c</fullName>
        <label>Pricing Matrix URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_processDiagram__c</fullName>
        <label>Process Diagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_progNotifURLExt__c</fullName>
        <label>Program Notification URL External</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_progNotifURLInt__c</fullName>
        <label>Program Notification URL Internal</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_rateCalculatorURL_COPY__c</fullName>
        <formula>fs_rateCalculator__c</formula>
        <label>Rate Calculator URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_rateCalculator__c</fullName>
        <label>Rate Calculator</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_reenrollmentInstructions__c</fullName>
        <label>Re-Enrollment Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_referralTemplateDetail__c</fullName>
        <label>Referral Template Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_referralTemplate__c</fullName>
        <label>Referral Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_reporting__c</fullName>
        <label>Reporting Summary and Schedule</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_screeningRequirementsURL__c</fullName>
        <label>Screening Requirements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_screening__c</fullName>
        <label>Screening</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_sla__c</fullName>
        <label>Enrollment Manager SLA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_specialRules__c</fullName>
        <label>Account Manager Special Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_staffRateType__c</fullName>
        <label>MBO Staff Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mark-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of (Margin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_subAdvRateType__c</fullName>
        <label>MBO Sub Adv Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mark-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of (Margin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_subRateType__c</fullName>
        <label>MBO Sub Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mark-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of (Margin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISSI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_successFactorsDetail__c</fullName>
        <label>Success Factors Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_successFactorsURL__c</fullName>
        <label>Success Factors URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_taxInformation_COPY__c</fullName>
        <label>Tax Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_taxInformation__c</fullName>
        <label>Tax Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_terms__c</fullName>
        <label>Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_timeMilestoneExpenseDetail__c</fullName>
        <label>Time Milestone Expense Entry Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_timeMilestoneExpenseURL2__c</fullName>
        <label>Time Milestone Expense Entry URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_timeMilestoneExpenseURL3__c</fullName>
        <label>Time Milestone Expense Entry URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_timeMilestoneExpenseURL__c</fullName>
        <label>Time Milestone Expense Entry URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_vastEngageSubAssociate__c</fullName>
        <label>VAST Engage Subs As Associates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vastFollowUpEmailSub__c</fullName>
        <label>VAST Follow-Up Email to Sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vastInsuranceValidation__c</fullName>
        <label>VAST Insurance Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vastInsuranceWaiver__c</fullName>
        <label>VAST Insurance Waiver Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vastProcessQual__c</fullName>
        <label>VAST Process After Qual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vastSummary__c</fullName>
        <label>VAST Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_vastTier2WorkerEval__c</fullName>
        <label>Vast Tier 2 Worker Evaluation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vendorQualCriteria__c</fullName>
        <label>Vendor Qualification Criteria URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_vettingQuestionsURL__c</fullName>
        <label>Vetting Questions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_vmsContactEmail__c</fullName>
        <label>VMS Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fs_vmsContactFullname__c</fullName>
        <label>VMS Contact Fullname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vmsContactPhone__c</fullName>
        <label>VMS Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fs_vmsImportInstructionsURL__c</fullName>
        <label>VMS Import Instructions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_vmsImport__c</fullName>
        <label>VMS Import</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_vmsLoginDetail__c</fullName>
        <label>VMS Login Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fs_vmsLoginPassword__c</fullName>
        <label>VMS Login Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vmsLoginUsername__c</fullName>
        <label>VMS Login Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_vmsUsageGuideURL__c</fullName>
        <label>VMS Usage Guide URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_welcomeSiteURL_COPY__c</fullName>
        <formula>fs_welcomeSiteURL__c</formula>
        <label>Welcome Site URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_welcomeSiteURL__c</fullName>
        <label>Welcome Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fs_woSetupGuide__c</fullName>
        <label>Work Order Setup Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rs_MSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRG (MSP)</relationshipLabel>
        <relationshipName>CRG_MSAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_VMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VMS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CRG (VMS)</relationshipLabel>
        <relationshipName>CRG_VMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_apEscalation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Escalation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG (AP Escalation)</relationshipLabel>
        <relationshipName>CRG_AP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_clientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG (Client Contact)</relationshipLabel>
        <relationshipName>CRG_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_client__c</fullName>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a company as the client.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Rolodex</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Reference Guides</relationshipLabel>
        <relationshipName>CRG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rs_escalation1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG (Escalation 1)</relationshipLabel>
        <relationshipName>CRG_esc1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_escalation2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG (Escalation 2)</relationshipLabel>
        <relationshipName>CRG_esc2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_escalation3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CRG (Escalation 3)</relationshipLabel>
        <relationshipName>CRG_esc3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Reference Guide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>rs_client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Reference Guide Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Reference Guides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>